<resources>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Hero Finder</string>
    <string name="menu_gallery">Level Finder</string>
    <string name="menu_slideshow">History</string>
    <string name="menu_about">About us</string>
    <string name="Feedback">Feedback</string>
    <string name="help">Help &amp; Support</string>
    <string name="TnC">Terms &amp; Conditions</string>
    <string name="helptxt"><b>We are always here to support you. Our customers  need is our first priority.</b> \n\nIf you are facing any kind of issue related to this application you can connect with us.\n\n
help.herofinderinfo@gmail.com \n\nplease, Do share screenshots  of the page with which you are facing problems, for better  understanding and having solved your problems quickly,\nwe are always here for you.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>